--- a/MainNotebook.ipynb
+++ b/MainNotebook.ipynb
@@ -2737,6 +2737,22 @@
     "    \n",
     "    \"\"\"\n",
     "    \n",
+    "    i = 0\n",
+    "    while(i < len(lista)):\n",
+    "        print(\"i = \", i, \"ts. lukua i vastaisi:\", lista[i] )\n",
+    "        j = i+1\n",
+    "        print(\"\\tLoppu lista, j= \", j)\n",
+    "        for x in range(j, len(lista)):\n",
+    "            y = lista[x]\n",
+    "            print(\"\\t\", y)\n",
+    "            if D.has_edge(lista[i], y):\n",
+    "                \n",
+    "            D.add_edge(lista[i], y, weight=1)\n",
+    "        i = i+1\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    "
    ]
   },
@@ -2994,7 +3010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
